<package format="3">
  <name>create_node</name>
  <version>2.3.1</version>
  <description>
    iRobot Create ROS driver node
    
    ROS bindings for the Create/Roomba driver.
    
    This is based on otl_roomba driver by OTL, ported to use
    create_driver's implementation instead. 
    This also contains a 'bonus' feature from the turtlebot 
    driver by Xuwen Cao and Morgan Quigley.
  </description>
  <maintainer email="hunterlallen@protonmail.com">Hunter L. Allen</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/create_node</url>
  <url type="repository">https://github.com/turtlebot/turtlebot_create</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot_create/issues</url>
  <author email="kwc@kwc.org">Ken Conley</author>
  <author email="mwise@willowgarage.com">Melonee Wise</author>

  <build_depend>create_driver</build_depend>
  <build_depend>create_msgs</build_depend>
  <!-- <build_depend>diagnostic_msgs</build_depend> -->
  <!-- <build_depend>dynamic_reconfigure</build_depend> -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <exec_depend>create_driver</exec_depend>
  <exec_depend>create_msgs</exec_depend>
  <!-- <exec_depend>diagnostic_msgs</exec_depend> -->
  <!-- <exec_depend>dynamic_reconfigure</exec_depend> -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python_orocos_kdl</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
